--- a/JavaWeb-exAvaliacao/WebContent/lista-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista-escola.xhtml
@@ -24,11 +24,8 @@
 		<ui:define name="content">
 			<div class="container top-landing">
 				<h:messages />
-					<p:dialog id="gmapDialog" widgetVar="dlg" width="625" height="400"
-							modal="true">
-							<p:gmap id="gmap" center="41.381542, 2.122893" zoom="15"
-								type="HYBRID" style="width:100%;height:400px" />
-						</p:dialog>
+					
+
 				<h2>Lista de Escolas</h2>
 				<div class="row">
 					<div class="col-sm-12">
@@ -59,10 +56,10 @@
 									<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 								</button>
 								<button title="Mapa" class="btn btn-success btn-xs"
-									type="button"  onclick="PF('dlg').show();">
+									type="button" jsf:action="#{alunoBean}" onclick="PF('dlg').show();">
 									<i class="fa fa-map-o" style="margin-right: 3px" /> Mapa
 								</button>
-								<p:commandButton id="btn" type="button" icon="ui-icon-pin-s" value="Show Map" onclick="PF('dlg').show();" />
+								
 							</p:column>
 
 						</p:dataTable>
