--- a/JavaWeb-exAvaliacao/WebContent/_template.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/_template.xhtml
@@ -27,7 +27,8 @@
 	<script src="resources/js/maps.js" />
 
 	<script src="resources/js/custom.js" />
-	<script src="resources/js/flat-ui.min.js" />
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 
 </h:head>
 <body>
