--- a/JavaWeb-exAvaliacao/WebContent/lista-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista-escola.xhtml
@@ -75,7 +75,7 @@
 								</h:commandLink>
 
 									<p:commandLink pa:data-toggle="modal" pa:data-target="#myModal"
-										style="margin-right: 3px" actionListener="#{escolaBean.teste(esc)}" title="Deletar"
+										style="margin-right: 3px" title="Deletar"
 										class="btn btn-danger btn-xs" type="button">
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									 <f:ajax render="delDesc delEnd delNome delSalas" listener="#{escolaBean.prepRemoverEscola(esc)}"/>
