--- a/JavaWeb-exAvaliacao/WebContent/lista-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista-curso.xhtml
@@ -26,13 +26,13 @@
 					style="width:100%;height:400px" />
 			</p:dialog>
 			<div class="container top-landing">
-				<h:messages />
+			<h:messages />
 				<h:form prependId="false">
 					<h2>Lista de Escolas</h2>
 					<div class="row">
 						<div class="col-sm-12">
-							<p:dataTable id="escolaTable" widgetVar="escolaTable"
-								class="table" var="esc" value="#{escolaBean.listEscola}">
+							<p:dataTable  id="escolaTable" widgetVar="escolaTable" class="table" var="esc"
+								value="#{escolaBean.listEscola}">
 								<p:column headerText="Nome">
 									<h:outputText value="#{esc.nome}" />
 								</p:column>
@@ -44,7 +44,7 @@
 								<p:column headerText="Qtd. Salas">
 									<h:outputText value="#{esc.salas}" />
 								</p:column>
-
+								
 								<p:column headerText="Descrição">
 									<h:outputText value="#{esc.descricao}" />
 								</p:column>
@@ -58,8 +58,7 @@
 										style="margin-right: 3px" title="Deletar"
 										class="btn btn-danger btn-xs" type="button">
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
-									 <f:ajax render="delDesc delEnd delNome delSalas"
-											listener="#{escolaBean.prepRemoverEscola(esc)}" />
+									 <f:ajax render="delDesc delEnd delNome delSalas" listener="#{escolaBean.prepRemoverEscola(esc)}"/>
 									</p:commandLink>
 									<p:commandButton value="Mapa"
 										style="padding-bottom:6px; height: 24px !important;"
@@ -88,32 +87,24 @@
 						</div>
 						<div class="modal-body">
 							<p>
-								Nome:
-								<h:outputText id="delNome" value="#{escolaBean.escolaTemp.nome}" />
+								Nome:<h:outputText id="delNome" value="#{escolaBean.escolaTemp.nome}" /> 
 							</p>
 							<p>
-								Endereço:
-								<h:outputText id="delEnd"
-									value="#{escolaBean.escolaTemp.endereco}" />
+								Endereço: <h:outputText id="delEnd" value="#{escolaBean.escolaTemp.endereco}" />
 							</p>
 							<p>
-								Qtd. Salas:
-								<h:outputText id="delSalas"
-									value="#{escolaBean.escolaTemp.salas}" />
+								Qtd. Salas: <h:outputText id="delSalas"  value="#{escolaBean.escolaTemp.salas}" />
 							</p>
 							<p>
-								Descrição:
-								<h:outputText id="delDesc"
-									value="#{escolaBean.escolaTemp.descricao}" />
+								Descrição: <h:outputText id="delDesc"  value="#{escolaBean.escolaTemp.descricao}" />
 							</p>
 
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default"
 								data-dismiss="modal">Não</button>
-							<p:commandLink action="#{escolaBean.removerEscola()}"
-								type="button" class="btn btn-primary btn-danger"
-								pa:data-dismiss="modal">Deletar</p:commandLink>
+							<p:commandLink  action="#{escolaBean.removerEscola()}"
+								type="button" class="btn btn-primary btn-danger" pa:data-dismiss="modal">Deletar</p:commandLink>
 						</div>
 					</div>
 				</div>
