--- a/JavaWeb-exAvaliacao/WebContent/lista-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista-escola.xhtml
@@ -65,7 +65,7 @@
 										style="padding-bottom:6px; height: 24px !important;"
 										styleClass="btn btn-success btn-xs"
 										onclick="PF('dlg').show();" icon="fa fa-map-o" update="geoMap"
-										action="#{escolaBean.buscarGps(esc.id)}">
+										action="#{escolaBean.buscarGps(esc.escolaId)}">
 									</p:commandButton>
 								</p:column>
 							</p:dataTable>
