--- a/JavaWeb-exAvaliacao/WebContent/cadastro-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro-curso.xhtml
@@ -18,6 +18,7 @@
 	</ui:define>
 
 		<ui:define name="content">
+
 			<div class="container top-landing">
 				<h2>Cadastro de Curso</h2>
 				<h:form prependId="false">
@@ -46,8 +47,8 @@
 								<h:outputLabel value="Data de Início" style="font-weight:bold" />
 								<h:inputText pa:type="date" pa:placeholder="Nome"
 									value="#{cursoBean.curso.dataInicio}" styleClass="form-control" />
-								
-								
+
+
 							</div>
 						</div>
 						<div class="col-md-6">
@@ -68,25 +69,19 @@
 						<div class="col-md-6">
 							<div class="form-group">
 								<h:outputLabel value="Escolas" style="font-weight:bold" />
-								<select multiple="multiple"
+								<select pa:placeholder="Digite ou selecione as escolas" multiple="multiple"
 									class="form-control multiselect multiselect-info"
 									id="cb-frentes" required="required" size="1"
-									jsf:value="#{checkstyleBean.frente}">
+									jsf:value="#{cursoBean.listEscolaSelecionadas}">
 									<option value="#{null}" jsfc="f:selectItem" />
-									<optgroup label="Profile">
-										<option value="0">My Profile</option>
-										<option value="1">My Friends</option>
-									</optgroup>
-									<optgroup label="System">
-										<option value="2">Messages</option>
-										<option value="3">My Settings</option>
-										<option value="4">Logout</option>
-									</optgroup>
-									<ui:repeat value="#{appBean.frentes}" var="frente"
-										jsfc="f:selectItems">
-										<option value="#{frente}">#{frente}</option>
+
+									<option value="4">Logout</option>
+
+									<ui:repeat value="#{cursoBean.listEscolaTotal}" var="escola">
+										<option value="#{escola.nome}">#{escola.nome}</option>
 									</ui:repeat>
 								</select>
+
 
 								<script type="text/javascript">
 								$(document).ready(function() {
