--- a/JavaWeb-exAvaliacao/WebContent/_template.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/_template.xhtml
@@ -21,13 +21,15 @@
 	<link rel="stylesheet"
 		href="https://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css" />
 	<link rel="stylesheet" href="resources/css/custom.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/js/flat-ui.js"></script>
-
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" />
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.js" />
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/js/flat-ui.js" />
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKwvaeHolteDKj5kKkg9z1uIXb7kfr-No" />
 	<script src="resources/js/maps.js" />
-
 	<script src="resources/js/custom.js" />
 
 
@@ -92,7 +94,7 @@
 										<li><a href="#">Aluno</a></li>
 										<li><a href="#">Professor</a></li>
 									</ul></li>
-									<li class="dropdown"><a href="#" class="dropdown-toggle"
+								<li class="dropdown"><a href="#" class="dropdown-toggle"
 									data-toggle="dropdown">Listar <b class="caret"></b></a> <span
 									class="dropdown-arrow"></span>
 									<ul class="dropdown-menu">
