JPA não está salvando o relacionamento CURSO-ESCOLA

--- a/JavaWeb-exAvaliacao/WebContent/cadastro-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro-curso.xhtml
@@ -120,7 +120,7 @@
 									value="Atualizar" />
 								<h:commandButton rendered="#{escolaBean.escolaUpdate == false}"
 									styleClass="btn btn-block btn-lg btn-primary"
-									action="#{cursoBean.cadastrarCurso()}" type="submit"
+									action="#{cursoBean.cadastrarCurso}" type="submit"
 									value="Cadastrar" />
 							</div>
 						</div>
