--- a/JavaWeb-exAvaliacao/WebContent/cadastro-professor.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro-professor.xhtml
@@ -7,7 +7,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:jsf="http://xmlns.jcp.org/jsf/"
 	xmlns:pa="http://xmlns.jcp.org/jsf/passthrough"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
 
 <h:body>
@@ -16,137 +17,141 @@
 		<ui:define name="title">
 	    Cadastro de Professor
 	</ui:define>
-		<div class="form-group">
-			<h:outputLabel value="Registro de Matrícula" style="font-weight:bold" />
-			<div class="input-group">
-				<span class="input-group-addon">RM</span> <input disabled="disabled"
-					type="text" class="form-control" />
-			</div>
-		</div>
-	
+
 
 		<ui:define name="content">
 			<div class=" container top-landing">
-			<h:messages />
-			<h2>Cadastro de Escolas</h2>
-			<h:form prependId="false">
+				<h:messages />
+				<h2>Cadastro de Professor</h2>
+				<h:form prependId="false">
 
-				<div class="row">
-					<div class="col-md-6">
-						<div class="form-group has-warning">
-							<h:outputLabel value="Nome" style="font-weight:bold" />
-							<div class="input-group">
-								<span class="input-group-addon">RM</span>
-								<h:inputText value="#{professorBean.professor.rmProfessor}"
-									disabled="disabled" type="text" class="form-control" />
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								<h:outputLabel value="Registro de Matrícula"
+									style="font-weight:bold" />
+								<div class="input-group">
+									<span class="input-group-addon">RM</span>
+									<h:inputText value="#{professorBean.professor.rmProfessor}"
+										pa:type="number" class="form-control" />
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<h:outputLabel value="Nome Completo" style="font-weight:bold" />
+								<h:inputText pa:placeholder="Nome Completo"
+									value="#{professorBean.professor.nome}"
+									styleClass="form-control" />
+							</div>
+							<!-- col-md-6 -->
+						</div>
+						<!-- row -->
+					</div>
+
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								<h:outputLabel value="Endereço" style="font-weight:bold" />
+								<h:inputText pa:placeholder="Endereço"
+									value="#{professorBean.professor.endereco}"
+									styleClass="form-control" />
+							</div>
+
+						</div>
+
+
+
+
+
+						<div class="col-md-6">
+
+							<div class="form-group">
+								<h:outputLabel value="Telefone" style="font-weight:bold" />
+								<h:inputText pa:placeholder="Telefone"
+									value="#{professorBean.professor.telefone}"
+									styleClass="form-control" />
+							</div>
+
+
+
+							<!-- col-md-6 -->
+						</div>
+
+
+						<!-- row -->
+					</div>
+
+
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+
+								<h:outputLabel value="Email" style="font-weight:bold" />
+								<h:inputText pa:placeholder="Email"
+									value="#{professorBean.professor.email}"
+									styleClass="form-control" />
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+
+								<h:outputLabel value="Data de Nascimento"
+									style="font-weight:bold" />
+								<h:inputText pa:placeholder="Data de Nascimento" pa:type="date"
+									value="#{professorBean.dataNascimento}"
+									styleClass="form-control" />
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6">
-						<div class="form-group">
-							<h:outputLabel value="Endereço" style="font-weight:bold" />
-							<h:inputText pa:placeholder="Endereço" pa:type="number"
-								value="#{professorBean.professor.endereco}"
-								styleClass="form-control" />
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+
+
+								<h:outputLabel value="Disciplinas" style="font-weight:bold" />
+								<h:selectManyMenu
+									styleClass="form-control select select-block mb1"
+									value="#{professorCadastroBean.professor.disciplinas}">
+									<f:selectItem itemValue="null" itemLabel="Sel. classe" />
+									<f:selectItems value="#{professorCadastroBean.listDisciplina}"
+										var="dis" itemValue="#{dis}" itemLabel="#{dis.nome}" />
+								</h:selectManyMenu>
+							</div>
+
 						</div>
 
 					</div>
 
-					<!-- row -->
-				</div>
+					<script type="text/javascript">
+								$(document).ready(function() {
+									$("select").select2({
+										
+									});
+								});
+							</script>
 
 
-				<div class="row">
-
-					<div class="col-md-6">
-
-						<div class="form-group">
-							<h:outputLabel value="Nome Completo" style="font-weight:bold" />
-							<h:inputText pa:placeholder="Nome Completo"
-								value="#{professorBean.professor.nome}"
-								styleClass="form-control" />
-						</div>
-
-						<!-- col-md-6 -->
-					</div>
-
-
-
-					<div class="col-md-6">
-
-						<div class="form-group">
-							<h:outputLabel value="Telefone" style="font-weight:bold" />
-							<h:inputText id="address" pa:placeholder="Telefone"
-								value="#{professorBean.professor.telefone}"
-								styleClass="form-control" />
-						</div>
-
-
-
-						<!-- col-md-6 -->
-					</div>
-
-
-					<!-- row -->
-				</div>
-
-
-				<div class="row">
-					<div class="col-md-6">
-						<div class="form-group">
-
-							<h:outputLabel value="Ajuste a posição da escola no mapa"
-								style="font-weight:bold" />
-							<h:inputText id="address" pa:placeholder="Email"
-								value="#{professorBean.professor.email}"
-								styleClass="form-control" />
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="form-group">
+								<c:if test="${professorCadastroBean.professor.rmProfessor != 0}">
+									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+										action="#{professorCadastroBean.atualizarProfessor()}" type="submit"
+										value="Atualizar" />
+								</c:if>
+								<c:if test="${professorCadastroBean.professor.rmProfessor == 0}">
+									<h:commandButton
+										rendered="#{professorCadastroBean.professor.rmProfessor == 0}"
+										styleClass="btn btn-block btn-lg btn-primary"
+										action="#{professorCadastroBean.cadastrarProfessor()}" type="submit"
+										value="Cadastrar" />
+								</c:if>
+							</div>
 						</div>
 					</div>
-					<div class="col-md-6">
-						<div class="form-group">
-
-							<h:outputLabel value="Data de Nascimento"
-								style="font-weight:bold" />
-							<h:inputText id="address" pa:placeholder="Data de Nascimento"
-								value="#{professorBean.professor.dataNasc}"
-								styleClass="form-control" />
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h:outputLabel value="Disciplinas" style="font-weight:bold" />
-						<h:selectManyListbox
-							styleClass="form-control multiselect multiselect-info"
-							required="required" size="1"
-							value="#{professorBean.listDisciplinaIdSelecionadas}">
-
-
-							<f:selectItems value="#{professorBean.listarDisciplinas()}" var="dis"
-								itemLabel="#{dis.nome}" itemValue="#{dis.idDisciplina}" />
-
-						</h:selectManyListbox>
-
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-12">
-						<div class="form-group">
-							<h:commandButton
-								rendered="#{professorBean.professorUpdate == true}"
-								styleClass="btn btn-block btn-lg btn-primary"
-								action="#{professorBean.atualizarProfessor()}" type="submit"
-								value="Atualizar" />
-							<h:commandButton
-								rendered="#{professorBean.professorUpdate == false}"
-								styleClass="btn btn-block btn-lg btn-primary"
-								action="#{professorBean.cadastrarProfessor()}" type="submit"
-								value="Cadastrar" />
-						</div>
-					</div>
-				</div>
-			</h:form>
-		</div>
+				</h:form>
+			</div>
 
 
 		</ui:define>
