--- a/JavaWeb-exAvaliacao/WebContent/lista-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista-curso.xhtml
@@ -13,30 +13,28 @@
 		<ui:define name="title">
 	    Lista de Cursos
 	</ui:define>
-		<f:metadata>
-			<f:viewAction action="#{cursoBean.listarCursos()}" />
-		</f:metadata>
+
 		<ui:define name="content">
 			<div class="container top-landing">
-			<h:messages />
+				<h:messages />
 				<h:form prependId="false">
 					<h2>Lista de Cursos</h2>
 					<div class="row">
 						<div class="col-sm-12">
-							<p:dataTable  id="cursoTable" widgetVar="cursoTable" class="table" var="cur"
-								value="#{cursoBean.listCurso}">
+							<p:dataTable id="cursoTable" widgetVar="cursoTable" class="table"
+								var="cur" value="#{cursoListaBean.listCurso}">
 								<p:column headerText="Nome">
 									<h:outputText value="#{cur.nome}" />
 								</p:column>
 
 								<p:column headerText="Data de Início">
-									<h:outputText value="#{cur.dataInicio}" />
+									<h:outputText value="#{cur.dataInicio}"></h:outputText>
 								</p:column>
 
 								<p:column headerText="Data de Término">
-									<h:outputText value="#{cur.dataTermino}" />
+									<h:outputText value="#{cur.dataTermino}"></h:outputText>
 								</p:column>
-								
+
 								<p:column headerText="Horas/Aula">
 									<h:outputText value="#{cur.duracao}" />
 								</p:column>
@@ -47,18 +45,21 @@
 									<h:outputText value="#{cur.escola.nome}" />
 								</p:column>
 								<p:column headerText="Opções">
-									<h:commandLink id="btnsearch"
-										action="#{cursoBean.prepAtualizarCurso(cur)}"
+									<h:commandLink id="btnsearch" action="cadastro-curso"
 										styleClass="btn btn-info btn-xs">
-										<i class="fa fa-pencil" style="margin-right: 3px" /> Editar
-								</h:commandLink>
+										<i class="fa fa-pencil" style="margin-right: 3px" />
+										<f:setPropertyActionListener
+											target="#{cursoCadastroBean.curso}" value="#{cur}" />
+									</h:commandLink>
 									<p:commandLink pa:data-toggle="modal" pa:data-target="#myModal"
 										style="margin-right: 3px" title="Deletar"
 										class="btn btn-danger btn-xs" type="button">
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
-									 <f:ajax render="delDesc delEnd delNome delSalas" listener="#{cursoBean.prepRemoverCurso(cur)}"/>
+									<f:setPropertyActionListener
+											target="#{cursoListaBean.idCursoRemover}"
+											value="#{cur.idCurso}" />
 									</p:commandLink>
-									
+
 								</p:column>
 							</p:dataTable>
 						</div>
@@ -80,24 +81,30 @@
 						</div>
 						<div class="modal-body">
 							<p>
-								Nome:<h:outputText id="delNome" value="#{cursoBean.cursoTemp.nome}" /> 
+								Nome:
+								<h:outputText id="delNome" value="#{cursoBean.cursoTemp.nome}" />
 							</p>
 							<p>
-								Vagas: <h:outputText id="delVagas" value="#{cursoBean.cursoTemp.vagas}" />
+								Vagas:
+								<h:outputText id="delVagas" value="#{cursoBean.cursoTemp.vagas}" />
 							</p>
 							<p>
-								Data de Início: <h:outputText id="delSalas"  value="#{cursoBean.cursoTemp.dataInicio}" />
+								Data de Início:
+								<h:outputText id="delSalas"
+									value="#{cursoBean.cursoTemp.dataInicio}" />
 							</p>
 							<p>
-								Escola: <h:outputText id="delDesc"  value="#{cursoBean.cursoTemp.escola}" />
+								Escola:
+								<h:outputText id="delDesc"
+									value="#{cursoBean.cursoTemp.escola.nome}" />
 							</p>
 
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default"
 								data-dismiss="modal">Não</button>
-							<p:commandLink  action="#{cursoBean.removerCurso()}"
-								type="button" class="btn btn-primary btn-danger" pa:data-dismiss="modal">Deletar</p:commandLink>
+							<p:commandLink action="#{cursoBean.removerCurso()}" type="button"
+								class="btn btn-primary btn-danger" pa:data-dismiss="modal">Deletar</p:commandLink>
 						</div>
 					</div>
 				</div>
