--- a/JavaWeb-exAvaliacao/WebContent/lista-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista-escola.xhtml
@@ -13,9 +13,7 @@
 		<ui:define name="title">
 	    Lista de Escolas
 	</ui:define>
-		<f:metadata>
-			<f:viewAction action="#{escolaBean.listarEscolas}" />
-		</f:metadata>
+	
 		<ui:define name="content">
 			<p:dialog header="#{escolaBean.escolaNome}" resizable="false"
 				styleClass="overlayDialog" id="gmapDialog" widgetVar="dlg"
@@ -32,7 +30,7 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<p:dataTable id="escolaTable" widgetVar="escolaTable"
-								class="table" var="esc" value="#{escolaBean.listEscola}">
+								class="table" var="esc" value="#{escolaListaBean.listEscola}">
 								<p:column headerText="Nome">
 									<h:outputText value="#{esc.nome}" />
 								</p:column>
@@ -49,24 +47,20 @@
 									<h:outputText value="#{esc.descricao}" />
 								</p:column>
 								<p:column headerText="Opções">
-									<h:commandLink id="btnsearch"
-										action="#{escolaBean.prepAtualizarEscola(esc)}"
+									<h:commandLink id="btnsearch" action="cadastro-escola"
 										styleClass="btn btn-info btn-xs">
-										<i class="fa fa-pencil" style="margin-right: 3px" /> Editar
-								</h:commandLink>
+										<i class="fa fa-pencil" style="margin-right: 3px" />
+										<f:setPropertyActionListener
+											target="#{escolaCadastroBean.escola}" value="#{esc}" />
+									</h:commandLink>
 									<p:commandLink pa:data-toggle="modal" pa:data-target="#myModal"
 										style="margin-right: 3px" title="Deletar"
 										class="btn btn-danger btn-xs" type="button">
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
-									 <f:ajax render="delDesc delEnd delNome delSalas"
-											listener="#{escolaBean.prepRemoverEscola(esc)}" />
+									<f:setPropertyActionListener 
+							target="#{escolaListaBean.idEscolaremover}" value="#{esc.idEscola}"/>
 									</p:commandLink>
-									<p:commandButton value="Mapa"
-										style="padding-bottom:6px; height: 24px !important;"
-										styleClass="btn btn-success btn-xs"
-										onclick="PF('dlg').show();" icon="fa fa-map-o" update="geoMap"
-										action="#{escolaBean.buscarGps(esc.escolaId)}">
-									</p:commandButton>
+
 								</p:column>
 							</p:dataTable>
 						</div>
@@ -86,34 +80,13 @@
 							<h4 class="modal-title" id="myModalLabel">Deseja deletar
 								esta escola?</h4>
 						</div>
-						<div class="modal-body">
-							<p>
-								Nome:
-								<h:outputText id="delNome" value="#{escolaBean.escolaTemp.nome}" />
-							</p>
-							<p>
-								Endereço:
-								<h:outputText id="delEnd"
-									value="#{escolaBean.escolaTemp.endereco}" />
-							</p>
-							<p>
-								Qtd. Salas:
-								<h:outputText id="delSalas"
-									value="#{escolaBean.escolaTemp.salas}" />
-							</p>
-							<p>
-								Descrição:
-								<h:outputText id="delDesc"
-									value="#{escolaBean.escolaTemp.descricao}" />
-							</p>
-
-						</div>
+				
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default"
 								data-dismiss="modal">Não</button>
-							<p:commandLink action="#{escolaBean.removerEscola()}"
+							<p:commandLink action="#{escolaListaBean.remove()}"
 								type="button" class="btn btn-primary btn-danger"
-								pa:data-dismiss="modal">Deletar</p:commandLink>
+								pa:data-dismiss="modal" >Deletar</p:commandLink>
 						</div>
 					</div>
 				</div>
