--- a/JavaWeb-exAvaliacao/WebContent/_template.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/_template.xhtml
@@ -23,14 +23,17 @@
 	<link rel="stylesheet" href="resources/css/custom.css" />
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" />
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.js" />
+
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/js/flat-ui.js" />
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKwvaeHolteDKj5kKkg9z1uIXb7kfr-No" />
 	<script src="resources/js/maps.js" />
 	<script src="resources/js/custom.js" />
+	<script src="resources/js/inputmask.js" />
+	<script src="resources/js/jquery.inputmask.js" />
+	<script src="resources/js/inputmask.date.extensions.js" />
+	
 
 
 </h:head>
